# DataScienceNotebooks

./: .gitignore  00_Random-Forest-Regression_sales_2 (1).ipynb  00_Random-Forest-Regression_sales_2.ipynb  00_predict_hourly_sales_ARIMA.ipynb  3D_plotting_with_matplotlib.ipynb  APL_processing.ipynb  Advanced data visualization.ipynb  Anomaly_Detection (1).ipynb  Anomaly_Detection.ipynb  Colormaps Matplotlib.ipynb  Copia de Python DTW Quickstart  Copia_de_Python_DTW_Quickstart.ipynb  Dimensionality_reduction_tutorial.ipynb  Dummy Model v2 GEA Notebook.ipynb  Encoding Categorical Variables.ipynb  Evaluation Metrics for regresion-based predictive models.ipynb  GAM.ipynb  GMM.ipynb  Graph Theory.ipynb  Incluir_limpiezas_cambio_producto.ipynb  Intro to python3.ipynb  Machine_Learning_Example.ipynb  Machine_learning.ipynb  Markov_chains.ipynb  NetworkX_example.ipynb  Numpy-SciPy-Pandas.ipynb  Pair Plots.ipynb  Python Introduction.ipynb  README.md  Scikit Learn predictive model with Python part 1.ipynb  TimeSeries-prediction-using-sarimax.ipynb  Tutorial python general.ipynb  Untitled0.ipynb  clustering.ipynb  curva_oferta_y_costes.ipynb  cvxpower_example.ipynb  dl_ia_conn_queries.ipynb  examen_python.ipynb  gekko_example.ipynb  histogram_bokeh.py  (+18 more)
IEA_EV_data_analysis_with_seaborn/: README.md
IEA_EV_data_analysis_with_seaborn/notebooks/: IEA_EV_data.ipynb
REE/: format_to_time_series.py  reference_patterns_mr.py
REE/notebooks/: Matplotlib_styles_and_polinomial_fits_with_REE_data.ipynb
current_bike_network/.ipynb_checkpoints/: bike_routes_ny-checkpoint.ipynb
data/: Sample - Superstore.xls  aapl.csv  data_correlation2.csv  data_loads_dem_original_pyomo.csv  houses.csv  income_taxes_spain_single_no_child.csv  results_forecast_demand.csv  results_forecast_demand_val.csv  results_forecast_irradiance.csv  results_forecast_temperature.csv  tabernas_meteo_data.csv
deep learning/: How to Develop Convolutional Neural Network Models for Time Series Forecasting.ipynb
forecasting/: Exponential Smoothing - Grid search.ipynb  sarimax_model_gen.ipynb
iberdrola/: Iberdrola_demand.ipynb
income_taxes/: income_taxes_analysis.py
income_taxes/.ipynb_checkpoints/: visualisation_income_taxes-checkpoint.ipynb
income_taxes/figures/: income_taxes_analysis.html
notebooks/Machine-learning/: Clustering K-means Silhoutte.ipynb  K-means_clustering_with_PCA.ipynb  Machine learning with Scikit-learn .ipynb  Random Forest Tutorial.ipynb  Scikit-Learn machine learning .ipynb  XAI.ipynb  bootstrapping.ipynb  curve_fitting_with_python.ipynb  data_fitting.ipynb  (+1 more)
pviz/data/: README.md
time_series_analysis/: Load_Forecasting.ipynb  Load_Forecasting_v01.ipynb  PVOutput.ipynb  PV_ Forecasting.ipynb  Time_series_analysis_python.ipynb  time_series_analysis.ipynb
widgets/: Widgets-Overview.ipynb
(+131 files in other folders)
