[project]
name = "data.science-notebooks"
version = "0.1.2"
description = "data.science-notebooks"
readme = "README.md"
keywords = ["datascience"]

requires-python = ">=3.12"
authors = [
    {name = "Jose Angel Velasco", email = "joseangel.velasco@yahoo.es"}
]

dependencies = [
    "catboost>=1.2.8",
    "connectorx>=0.4.3",
    "db-dtypes>=1.4.2",
    "duckdb>=1.3.0",
    "fastexcel>=0.13.0",
    "gcsfs>=2025.3.2",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.103.0",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-bigquery-storage>=2.30.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-genai>=1.12.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jsonschema-specifications>=2025.4.1",
    "matplotlib>=3.10.1",
    "mkdocs-exporter>=6.2.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-markdownextradata-plugin>=0.2.6",
    "mkdocs-material>=9.6.15",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "nbconvert>=7.2.0",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "referencing>=0.36.2",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.2.3",
    "pandas-gbq>=0.29.1",
    "plotly>=6.0.1",
    "polars>=1.27.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pylint>=3.3.8",
    "pymysql>=1.1.1",
    "pytest>=8.4.0",
    "python-ulid>=3.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "soupsieve>=2.7",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "streamlit>=1.44.1",
    "xgboost>=3.0.4",
    "xlsxwriter>=3.2.2",
    "xlwings>=0.33.14",
    "statsmodels>=0.14.6",
    "xlrd>=2.0.2",
    "pip>=26.0.1",
]




[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.5",
    "vulture>=2.14",
]

[tool.ruff]
exclude = [".build"]
line-length = 120
target-version = "py312"
lint.ignore = ["E712"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
pretty = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
warn_redundant_casts = true
install_types = true
non_interactive = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true
module = [
    "joblib.*",
    "nbformat.*",
    "numpy.*",
    "pandas.*",
    "polars.*",
    "plotly.*",
    "seaborn.*",
    "scipy.*",
    "shap.*",
    "sklearn.*",
    "unidecode.*",
    "xgboost.*",
    "yaml.*",
    "scikit-optimize.*"
]




[tool.setuptools]
include-package-data = true
